--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datetimepicker.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+      <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
     <script src="assets/js/html5shiv.min.js" type="text/javascript"></script>
     <script src="assets/js/respond.min.js" type="text/javascript"></script>
@@ -34,5 +35,6 @@
     <script src="assets/js/Chart.bundle.js" type="text/javascript"></script>
     <script src="assets/js/chart.js" type="text/javascript"></script>
     <script src="assets/js/app.js" type="text/javascript"></script>
+    <script src="assets/js/LoginApp.js"></script>
   </body>
 </html>
