--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-      <title>Itctv</title>
+      <title>AWAYCOVID</title>
       <base href=".">
 
       <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 
-      <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+      <!--<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
