--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 
       <!--<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://cdn.bootcdn.net/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+      <!--<link rel="stylesheet" type="text/css" href="assets/css/flag-icon.css">-->
       <link rel="stylesheet" type="text/css" href="assets/css/select2.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-datetimepicker.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css">
