--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     <script src="assets/js/Chart.bundle.js" type="text/javascript"></script>
     <script src="assets/js/chart.js" type="text/javascript"></script>
     <script src="assets/js/app.js" type="text/javascript"></script>
-    <script src="assets/js/LoginApp.js"></script>
+    <!--<script src="assets/js/canvasjs.min.js" type="text/javascript"></script>-->
+    <!--<script src="assets/js/LoginApp.js"></script>-->
   </body>
 </html>
