--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="https://cdn.bootcdn.net/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-timepicker.css">
       <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
       <!--<link rel="stylesheet" type="text/css" href="assets/css/flag-icon.css">-->
       <link rel="stylesheet" type="text/css" href="assets/css/select2.min.css">
@@ -34,6 +35,7 @@
     <script src="assets/js/select2.min.js"></script>
     <script src="assets/js/moment.min.js"></script>
     <script src="assets/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="assets/js/bootstrap-timepicker.min.js"></script>
     <script src="assets/js/Chart.bundle.js" type="text/javascript"></script>
     <script src="assets/js/chart.js" type="text/javascript"></script>
     <script src="assets/js/app.js" type="text/javascript"></script>
