--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <script src="assets/js/bootstrap-datetimepicker.min.js"></script>
     <script src="assets/js/bootstrap-timepicker.min.js"></script>
     <script src="assets/js/Chart.bundle.js" type="text/javascript"></script>
-    <script src="assets/js/chart.js" type="text/javascript"></script>
+    <!--<script src="assets/js/chart.js" type="text/javascript"></script>-->
     <script src="assets/js/app.js" type="text/javascript"></script>
     <!--<script src="assets/js/canvasjs.min.js" type="text/javascript"></script>-->
     <!--<script src="assets/js/LoginApp.js"></script>-->
